# Rforestry

./: .gitignore  .gitmodules  .readthedocs.yaml  DESCRIPTION  NAMESPACE  README.md  forestry.Rproj  readthedocs_requirements.txt
.github/workflows/: R.yaml  branch_naming.yml  check-noncontainerized.yaml  cpp.yaml  cross_language_test.yaml  docker.yaml  python.yaml
C++/src/: RcppExports.cpp  rcpp_cppBuildInterface.cpp
Docker/python_build_environment/: Dockerfile
Python/: .bandit  .flake8  .isort.cfg  MANIFEST.in  README.md  ci-requirements.txt  pyproject.toml  setup.py
Python/docs/source/: api.rst  conf.py  index.rst  usage.rst
Python/extension/: CMakeLists.txt  api.cpp  api.h  main.cpp
Python/extension/src/: api.cpp
Python/random_forestry/: __init__.py  forestry.py  preprocessing.py  processed_dta.py  test.py
Python/random_forestry/validators/: __init__.py  base_validator.py  fit_validator.py  predict_validator.py
Python/tests/: conftest.py  test_aggregation_weights.py  test_constructor.py  test_different_aggregations.py  test_estimator_interface.py  test_export.py  test_fit.py  test_forestry.py  test_forests_equality.py  test_get_set_parameters.py  test_groups.py  test_hierarchical_shrinkage.py  test_pickle_unpickle.py  test_predict.py  test_scale.py  test_seed.py  test_translate_tree.py  test_validators_helpers.py  test_weight_matrix.py
R/: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  R_preprocessing.R  RcppExports.R  backwards_compatible.R  compute_rf_lp.R  forestry.R  neighborhood_imputation.R  plottree.R
R/R/: RcppExports.R  backwards_compatible.R  compute_rf_lp.R  forestry.R  plottree.R
R/man/: compute_lp-forestry.Rd  export_json.Rd  export_treelite_json.Rd  forestry.Rd  getVI-forestry.Rd  plot-forestry.Rd  predict-forestry.Rd  relinkCPP.Rd  training_data_checker-forestry.Rd
R/tests/: testthat.R
R/tests/testthat/: test-backward_compatibility.R  test-compute_rf_lp.R  test-deepsplitting.R  test-export_treelite_json.R  test-forestry.R  test-forestry_OBB.R  test-forestry_VariableImportance.R  test-groupSampling.R  test-groups.R  test-hold_out_idx.R  test-imputationSplitting.R  test-impute_features.R  test-naDirection.R  test-nodesizeStrictAvg.R  test-observationWeights.R  test-plottree.R  test-saveRF.R  test-splitratioHonesty.R  test-terminalNodes.R  test-trainingIdx.R  test-treeCounts.R  test-weightMatrixFlag.R
R/vignettes/: sampling.Rmd
cross_language_test/: R_test.R  run.sh
man/: CppToR_translator.Rd  addTrees-forestry.Rd  autoforestry-forestry.Rd  autohonestRF.Rd  compute_lp-forestry.Rd  forest_checker.Rd  forestry-class.Rd  forestry.Rd  getOOB-forestry.Rd  getOOBpreds-forestry.Rd  getVI-forestry.Rd  honestRF.Rd  impute_features.Rd  loadForestry-forestry.Rd  make_savable.Rd  multilayer-forestry.Rd  plot-forestry.Rd  predict-forestry.Rd  predict-multilayer-forestry.Rd  preprocess_testing.Rd  preprocess_training.Rd  relinkCPP.Rd  saveForestry-forestry.Rd  testing_data_checker-forestry.Rd  training_data_checker-forestry.Rd
src/: DataFrame.cpp  DataFrame.h  Makevars  Makevars.win  RFNode.cpp  RFNode.h  RcppExports.cpp  dataFrame.cpp  dataFrame.h  forestry.cpp  forestry.h  forestryTree.cpp  forestryTree.h  multilayerForestry.cpp  multilayerForestry.h  rcpp_cppBuildInterface.cpp  treeSplitting.cpp  treeSplitting.h  utils.cpp  utils.h
tests/: R_test.R  python_test.py  run.sh  testthat.R
tests/Comparisons/: CompareRidge.R  RFSpeedCompare.R  ridgeBenchmarkN.R  ridgeBenchmarkP.R
tests/Comparisons/speed_tests/: run_speed_test_now.R
tests/cpp/: CMakeLists.txt  test.cpp
tests/crashes/: split_inconsistency.R
tests/cross_language/: R_test.R  python_test.py  run.sh
tests/testthat/: setup.R  test-OOBpredictions.R  test-autoforestry.R  test-backward_compatibility.R  test-compute_rf_lp.R  test-deepsplitting.R  test-forestry.R  test-forestry_OBB.R  test-forestry_VariableImportance.R  test-forestry_addTrees.R  test-forestry_largeMinNodeSize.R  test-forestry_nonContinuousSplit.R  test-forestry_weightmatrix.R  test-groups.R  test-imputationSplitting.R  test-imputation_monotonicity.R  test-impute_features.R  test-location_shift.R  test-max-depth.R  test-minSplitGain.R  test-monotonicity.R  test-multilayerForestry.R  test-observationWeights.R  test-ridgeRF.R  test-saveMultilayer.R  test-saveRF.R  test-terminalNodes.R
vignettes/: example.Rmd
